--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.webmanifest" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>Genshin Wish Auto-Import - Manual</title>
   </head>
